name:                rpmostree-tool
version:             0.1.3
synopsis:            rpm-ostree update wrapper that caches change info
description:
        A thin wrapper of "rpm-ostree update", which outputs diff of changes
        relative to the previous pull. This is useful if you rpm-ostree update
        Silverblue or Kinoite etc several times between actual reboots into
        the latest deployment.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2022-2023  Jens Petersen <juhpetersen@gmail.com>
category:            Utility
homepage:            https://github.com/juhp/rpmostree-tool
bug-reports:         https://github.com/juhp/rpmostree-tool/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       2.0
tested-with:         GHC == 8.6.5
                     || == 8.8.4
                     || == 8.10.7
                     || == 9.0.2
                     || == 9.2.5
                     || == 9.4.4

source-repository head
  type:                git
  location:            https://github.com/juhp/rpmostree-tool.git

executable rpmostree-tool
  main-is:             Main.hs
  other-modules:       Paths_rpmostree_tool
  hs-source-dirs:      src
  build-depends:       base < 5,
                       directory,
                       extra,
                       filepath,
                       process,
                       simple-cmd,
                       simple-cmd-args,
                       simple-prompt,
                       xdg-basedir
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
